refactoring(Modal): add div with id modal for modal component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="root"></div>
         <div id="portal"></div>
+        <div id="modal"></div>
         <script type="module" src="/src/index.jsx"></script>
     </body>
 </html>
